--- a/spring/springdemo/pom.xml
+++ b/spring/springdemo/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>springdemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springdemo</name>
-	<description>developia spring student</description>
+	<description>Developia student sql</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
