--- a/spring web MVC 2/spring-jpa-ayaan/src/main/resources/application.properties
+++ b/spring web MVC 2/spring-jpa-ayaan/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8088
 
+spring.datasource.url=jdbc:mysql://localhost:3306/java1-jpa
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
