--- a/spring web MVC 2/springweb-ayaan/src/main/resources/application.properties
+++ b/spring web MVC 2/springweb-ayaan/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/java1
 spring.datasource.username=root
-spring.datasoruce.password=ayan
+spring.datasoruce.password=1234
