--- a/spring web MVC 2/spring-security-ayaan/src/main/resources/application.properties
+++ b/spring web MVC 2/spring-security-ayaan/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 server.port=4404
 
 spring.datasource.url=jdbc:mysql://localhost:3306/java1-security
-spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-spring.security.user.name=dea
-spring.security.user.password=1234
+#spring.security.user.name=dea
+#spring.security.user.password=1
 
-spring.jpa.defer-datasource-initialization: true
+#spring.jpa.defer-datasource-initialization=true
