--- a/spring web MVC 2/spring-rest-ayaan/src/main/resources/application.properties
+++ b/spring web MVC 2/spring-rest-ayaan/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=6606
 
+spring.datasource.url=jdbc:mysql://localhost:3306/java1-rest
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
