--- a/spring web MVC 2/spring-rest-ayaan/src/main/resources/application.properties
+++ b/spring web MVC 2/spring-rest-ayaan/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+spring.profiles.active=prod
